# NexusAI

./: .env.example  .gitignore  .prettierrc  ARCHITECTURE.md  README.md  RUNBOOK.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/orchestrator/: .dockerignore  Dockerfile  package.json  tsconfig.json
apps/orchestrator/src/: config.ts  index.ts  logger.ts  metrics.ts  redis.ts
apps/rag/: .dockerignore  Dockerfile  package.json  pyproject.toml
apps/rag/app/: __init__.py  chunking.py  config.py  db.py  embeddings.py  ingest.py  main.py  query_decomp.py  rerank.py  retrieval.py  routes_connectors.py  schemas.py
apps/rag/app/connectors/: __init__.py  github.py  notion.py  slack.py  url_fetch.py
apps/rag/nexusai_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/realtime/: package.json
apps/realtime/src/: alerts.ts  anomaly.ts  clickhouse.ts  index.ts  sentiment.ts
apps/sandbox/: Dockerfile  package.json
apps/sandbox/src/: executor.ts  index.ts
apps/simulation/: package.json  tsconfig.tsbuildinfo
apps/simulation/src/: index.ts
apps/web/: .dockerignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  (+1 more)
infra/clickhouse/: init.sql
infra/k8s/: README.md  config.yaml  namespace.yaml  orchestrator.yaml  rag.yaml  realtime.yaml  sandbox.yaml  web.yaml
infra/neo4j/: init.cypher
infra/otel/: collector.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/terraform/: README.md  main.tf
scripts/: seed.sh
(+100 files in other folders)
